introduced InstanceProviders to allow different types of instance data
- still relicts from old mechanism (e.g. ConfigurationType enum)
- ui has still to be updated accordingly (InstanceDataImportWizard, ...)

git-svn-id: http://svn.esdi-humboldt.eu/repo/humboldt2/trunk@4284 5d385326-3dfc-11dd-8f4f-eb0017f4c70c